Removed unnecessary blocks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2201,6 +2201,10 @@ input, select, textarea {
 			vertical-align: middle;
 		}
 
+		#header #subtitle {
+			color: #fff
+		}
+
 		#header header {
 			display: inline-block;
 		}
