--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -517,6 +517,24 @@ input, select, textarea {
 					padding-top: 80px;
 				}
 
+
+		 .project-link-btn {
+			color: white;
+			font-size: medium;
+			margin-left: 20px;
+			padding: 10px 20px;
+			background-color: #9a59c0;
+			border-radius: 5px;
+			text-decoration: none;
+			display: inline-block;
+			text-decoration: none;
+		
+		}
+		.project-link-btn:visited {
+			color: white;  /* Ensures visited links remain white */
+			text-decoration: none;
+		}
+
 		@media screen and (max-width: 1680px) {
 
 			.row {
@@ -2304,6 +2322,7 @@ input, select, textarea {
 			height: 21px;
 			border-left: solid 1px rgba(192, 192, 192, 0.35);
 			border-right: solid 1px rgba(192, 192, 192, 0.35);
+			padding: 0px 10px;
 		}
 
 			#nav > ul:before, #nav > ul:after {
